add  background and fix some inconsistency

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -10,7 +10,7 @@
         padding: 1.5rem 1.5rem 2rem 1.5rem;
     }
 
-    background-image: url('/Users/harryking/Documents/IT-Project/COMP30022/public/images/login-background.jpeg');
+    background-image: url('./image/login-background.jpeg');
     background-repeat:no-repeat;
     background-size: cover;
 }
@@ -28,7 +28,7 @@
         padding: 1.5rem 1.5rem 2rem 1.5rem;
     }
 
-    background-image: url('/Users/harryking/Documents/IT-Project/COMP30022/public/images/login-background.jpeg');
+    background-image: url('./image/login-background.jpeg');
     background-repeat:no-repeat;
     background-size: cover;
 }
