--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -32,3 +32,63 @@
     background-repeat:no-repeat;
     background-size: cover;
 }
+
+
+
+.panel-wrapper{
+    position: relative;
+    z-index: 99;
+    .panel{
+        transition: all 0.3s ease-in-out;
+        transform: translateX(25rem);
+
+    }
+    &.active{
+        .over-layer{
+            display: block;
+        }
+        .panel{
+            transform: translateX(0);
+        }
+    }
+}
+
+.over-layer{
+    display: none;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0,0,0,0.4);
+    z-index: 9;
+}
+
+// .panel{
+//     width: 25rem;;
+//     position: fixed;
+//     top: 0;
+//     bottom: 0;
+//     left: 0;
+//     right: 0;
+//     background: #fff;
+//     box-shadow: -3px 0 3px rgba(0,0,0,0.04);
+//     transform: translateX(25rem);
+//     transition: all 0.3s ease-in-out;
+//     z-index: 99;
+//     .head{
+//         padding: 0.5rem;
+//         text-align: right;
+
+//     }
+//     .close {
+//         font-size: 24px;
+//         font-weight: 600;
+//         color: #333;
+//         cursor: pointer;
+//         line-height: 1;
+//         margin-right: 4px;
+//     }
+// }
+
+
