--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -53,16 +53,16 @@
     }
 }
 
-.over-layer{
-    display: none;
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background: rgba(0,0,0,0.4);
-    z-index: 9;
-}
+// .over-layer{
+//     display: none;
+//     position: fixed;
+//     top: 0;
+//     bottom: 0;
+//     left: 0;
+//     right: 0;
+//     background: rgba(0,0,0,0.4);
+//     z-index: 9;
+// }
 
 // .panel{
 //     width: 25rem;;
