style: :lipstick: adjust the alignment to center

--- a/client/src/css/homePage.css
+++ b/client/src/css/homePage.css
@@ -1,87 +1,14 @@
-.grid-wrapper{
-    display: grid;
-    grid-template-columns: [col] 400rpx [col] 400rpx [col] 400rpx [col] 400rpx;
-    grid-template-rows: [row] auto [row] auto [row] auto [row] auto; 
-    margin-top: 50px;
-    grid-gap: 15px;
-    text-align: center
-}
-
-.section-1-top{
-    display: inline;
-    grid-column: col 2/ span 2;
-    grid-row: row 1;
-    text-align: center;
-}
 
 .title{
-    margin-top: 0rpx;
     font-weight: bold;
+    margin-top: 50px;
 }
 
-.content{
-    text-align: center;
-    margin-top: 100px;
-}
-
-.helightText{
-    font-weight: bold;
-}
-
-.section-2{
-    grid-column: col 1/ span 4;
-    grid-row: row 2;
-}
-
-
-.section-3-left{
-    grid-column: col 1/ span 2;
-    grid-row: row 3;
-}
-
-.section-3-right{
-    grid-column: col 3/ span 2;
-    grid-row: row 3;
- 
-}
-
-.section-4{
-    grid-column: col 1/ span 4;
-    grid-row: row 4;
-}
-
-.step-wrapper{
-    display: grid;
-    grid-template-columns: [col] 450rpx [col] 450rpx [col] 450rpx;
-    grid-template-rows: [row] auto [row] auto;
-    text-align: center;
-    grid-gap: 15px;
-    font-weight: bold;
-    margin-top: 80px;
-    background-color: #00b0ff;
-    height: 350px;
-}
-
-.step-1{
-    grid-column: col 1/ span 1;
-    grid-row: row 2;
-}
-
-.step-2{
-    grid-column: col 2/ span 1;
-    grid-row: row 2;
-}
-
-.step-3{
-    grid-column: col 3/ span 1;
-    grid-row: row 2;
-}
 
 .step-main-title{
-    grid-column: col 1/ span 3;
-    grid-row: row 1;
     font-size: xx-large;
     margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .step-title{
@@ -89,35 +16,20 @@
     margin-bottom: 10px;
 }
 
-.step-content{
-    margin-top: 50px;
-}
-
-.text-bottom{
-    margin-top: 80px;
-    text-align: center;
-}
-
-.text-bottom-title{
-    font-weight: bold;
-    font-size: large;
-}
 
 .text-bottom-content{
     margin-top: 20px;
 }
 
 .bottom{
-    
     margin-top: 80px;
     text-align: center;
     background-color: rgb(98, 100, 100);
     color: aliceblue;
-    height: 100px;
+    height:70px;
     width: 100%;
     bottom: 0;
 }
-
 
 img{
     height: 450px;
